// file: pkg/web/proto/responses/flush_cache_response.proto
// version: 1.0.0
// guid: pqr01234-5678-9abc-def0-123456789012

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";


option features.(pb.go).api_level = API_OPAQUE;

message FlushCacheResponse {
  // Whether the flush was successful
  bool success = 1;

  // Number of entries flushed
  int64 entries_flushed = 2;

  // Request metadata for tracing
  gcommon.v1.common.RequestMetadata metadata = 3;
}
