// file: pkg/web/proto/requests/get_cache_config_request.proto
// version: 1.0.0
// guid: abc12345-6789-0def-1234-567890abcdef

edition = "2023";

package gcommon.v1.web;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";

message GetCacheConfigRequest {
  // Request metadata for tracing
  gcommon.v1.common.RequestMetadata metadata = 1;
}
