// file: pkg/web/proto/responses/update_cache_config_response.proto
// version: 1.0.0
// guid: jkl45678-90ab-cdef-1234-567890abcdef

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";



message UpdateCacheConfigResponse {
  // Whether the update was successful
  bool success = 1;

  // Request metadata for tracing
  gcommon.v1.common.RequestMetadata metadata = 2;
}
