// file: proto/gcommon/v2/web/web_admin_service.proto
// version: 1.0.1
// guid: 1419b30a-cf4d-4cd5-80ab-8bdd18381d02
// file: proto/gcommon/v2/web/web_admin_service.proto
//
// Administrative service for managing web server cache settings.
//
edition = "2023";

package web.v2;

import "web/v2/flush_cache_request.proto";
import "web/v2/flush_cache_response.proto";
import "web/v2/get_cache_config_request.proto";
import "web/v2/get_cache_config_response.proto";
import "web/v2/update_cache_config_request.proto";
import "web/v2/update_cache_config_response.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/webpb/v2";

/**
 * WebAdminService provides cache administration endpoints
 * for web server management tools.
 */
service WebAdminService {
  // Retrieve current cache configuration
  rpc GetCacheConfig(GetCacheConfigRequest) returns (GetCacheConfigResponse);

  // Update cache configuration
  rpc UpdateCacheConfig(UpdateCacheConfigRequest) returns (UpdateCacheConfigResponse);

  // Flush all cached entries
  rpc FlushCache(FlushCacheRequest) returns (FlushCacheResponse);
}
